# giftorio

./: .gitignore  Cargo.toml  README.md  blueprint2.json  index.html  main.py  package.json  pyproject.toml  robots.txt  tailwind.config.js  vite.config.js
.github/workflows/: deploy.yaml
src/: blueprint.rs  constants.rs  image_processing.rs  lib.rs  models.rs  progress.rs  signals.rs
src/data/: signals-dlc.json  signals.json
web/: App.jsx  Background.jsx  backgroundVideo.js  index.css  index.html  script.js  signals-dlc.js  signals.js  worker.js
web/assets/img/: gump.webm  nyan.webm  rick.webm
web/pkg/: giftorio_wasm.d.ts  giftorio_wasm.js  giftorio_wasm_bg.wasm  giftorio_wasm_bg.wasm.d.ts  package.json
