[package]
name = "giftorio_wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = { version = "1.0", features = ["zlib"] }
base64 = "0.13"
image = "0.24"
js-sys = "0.3.77"
rayon = "1.10.0"
